# writer-computer

./: AGENTS.md  CHANGELOG.md  TODOS.md  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  wrangler.jsonc
SPECs/: embedded-terminal-spec.md  empty-list-caret-spec.md  external-file-watcher-spec.md  heading-top-padding-spec.md  link-paths-with-spaces-spec.md  list-prefix-interaction-zones-spec.md  list-selection-geometry-revamp-spec.md  list-selection-todo-checkbox-regression-spec.md  mermaid-canvas-widget-spec.md  mermaid-fullscreen-diagram-spec.md  reveal-in-sidebar-and-external-watcher-spec.md  section-indicators-spec.md  sidebar-drag-drop-and-shortcut-spec.md  sidebar-sections-spec.md  table-cell-markdown-preview-spec.md  table-virtualization-scroll-stability-spec.md  terminal-sidebar-polish-spec.md
SPECs/Agent/: worksheet-dependency-lock-refresh.md  worksheet-embedded-terminal.md  worksheet-heading-top-padding.md  worksheet-table-cell-markdown-preview.md  worksheet-table-virtualization-scroll-stability.md
apps/desktop/: package.json
apps/desktop/shared/: settings.schema.json
apps/desktop/src/: App.css  App.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  state.rs  watcher.rs
apps/desktop/src-tauri/src/commands/: fs.rs  mod.rs  search.rs  terminal.rs  workspace.rs
apps/desktop/tests/: code-fence-extension.test.ts  drag-selection-gate.test.ts  file-context-menu.test.ts  heading-decorations.test.ts  image-paste.test.ts  list-extension.test.ts  markdown-links.test.ts  mermaid.test.ts  paths.test.ts  root-context-menu.test.ts  stores.test.ts  (+4 more)
apps/website/: index.html
docs/: editor.md  keyboard-shortcuts.md  open-flow.md  website-deploy.md
docs/workflows/: worktrees.md
scripts/: worktree.sh
(+73 files in other folders)
