[package]
name = "desktop"
version = "0.0.31"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = { version = "7", features = ["macos_fsevent"] }
ignore = "0.4"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["fs", "sync"] }
parking_lot = "0.12"
thiserror = "2"
trash = "5"
base64 = "0.22"
tauri-plugin-store = "2.4.2"
tauri-plugin-updater = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-webdriver = { version = "0.2", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.4"

[features]
# Embeds a W3C WebDriver server in the app for local E2E testing with
# `tauri-webdriver` + WebdriverIO. Never enable this for release builds.
e2e = ["dep:tauri-plugin-webdriver"]

[dev-dependencies]
tempfile = "3"
regex-lite = "0.1"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "s"
panic = "abort"
